# EventPlanner

./: README.md  beastmode-3.1.chatmode.md  document_reviewer.py  read_rapid_care.py  read_week1.py  school-jefferson.code-workspace  school-jefferson.code-workspace.backup
projects/Cathedral/: Cathedral_build guide.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
projects/EventPlanner 2.0/: .editorconfig  EVENTDESKPRO_UI_UX_TODO_v1.2.1_ADDENDUM.md  EVENTDESKPRO_UI_UX_TODO_v1.2.md  Justfile  Package.swift  README.md  TEXT_INPUT_FIX.md
projects/EventPlanner 2.0/.build/: build.db  plugin-tools.yaml
projects/EventPlanner 2.0/.build/index-build/: build.db  plugin-tools.yaml
projects/EventPlanner 2.0/.devcontainer/: devcontainer.json
projects/EventPlanner 2.0/docs/: README.md  public_registration.md
projects/EventPlanner 2.0/rust-core/: Cargo.toml  cbindgen.toml
projects/EventPlanner 2.0/rust-core/include/: eventdesk_core.h
projects/EventPlanner 2.0/rust-core/src/: lib.rs
projects/EventPlanner 2.0/rust-core/tests/: analytics_store_tests.rs  analytics_tests.rs  attendees_members_tests.rs  counts_tests.rs  db_audit_tests.rs  db_commit_tests.rs  export_tests.rs  rollover_tests.rs  ssot_tests.rs
projects/EventPlanner 2.0/scripts/: build_universal.sh  gen_header.sh  package_dist.sh  update_progress.sh  xcode_copy_dylib.sh
projects/EventPlanner 2.0/tools/: find_o_refs.sh
review/: ITX321 Systems Analysis and Design-Syllabus Master-10_2024 .docx  Rapid Care inc.docx  Week 1 boards and cource work.docx
(+2729 files in other folders)
