[package]
name = "eventdesk_core"
version = "0.1.0"
edition = "2021"
description = "EventDeskPro core domain (SSOT) with optional C FFI for Swift"
license = "UNLICENSED"

[lib]
name = "eventdesk_core"
crate-type = ["rlib", "cdylib"]

[features]
ffi = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"

[[bin]]
name = "edp_tool"
path = "src/bin/edp_tool.rs"

[dev-dependencies]
 anyhow = "1"
 tempfile = "3"
